code/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      name: myapp
  template:
    metadata:
      labels:
        name: myapp
    spec:
      containers:
        - name: myapp
          image: nginx
          
          ports:
            - containerPort: 80
          
---
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    site: nginx
spec:
  type: NodePort
  selector:
    name: myapp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32410
