code/tomacat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcatinfra
spec:
  replicas: 1
  selector:
    matchLabels:
        app: tomcatinfra

  template:
    metadata:
      name: tomcatinfra
      labels:
        app: tomcatinfra
    spec:
      containers:
      - image: saravak/tomcat8
        name: tomcatapp
        ports:
          - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: java
  labels:
    site: tomcat
spec:
  type: NodePort
  selector:
        app: tomcatinfra
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32400
