code/allow-cluster-internal-ingress-only.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-cluster-internal-ingress-only
spec:
  order: 20
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      source:
         nets: [192.168.0.0/16,10.0.0.0/8]
    - action: Deny
  selector: has(kubernetes-host)
