code/nginx-traffic.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: default
spec:
  selector: name == 'myapp'
  types:
  - Ingress
  ingress:
  - action: Allow
    source:
      nets:
      - 192.168.33.0/24
       # - 172.42.42.0/24
       
    destination:
      selector: name == 'myapp'
